--- a/frontend/lightcontrol-frontend/src/index.css
+++ b/frontend/lightcontrol-frontend/src/index.css
@@ -5,7 +5,10 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: rgb(230, 253, 249); */
+  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/cd3bda89071257.5de95d9d61c54.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
