--- a/frontend/lightcontrol-frontend/src/styles/Home.css
+++ b/frontend/lightcontrol-frontend/src/styles/Home.css
@@ -29,6 +29,13 @@
 
 .card-sample {
     margin-left: 13rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 30%;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+                    "col1 col2" 
+                    "col3 col4";
 }
 
 .bedroom {
@@ -36,6 +43,7 @@
     height: 300px;
     background-color: rgba(245, 245, 245, 0.602);
     margin-bottom: 2rem;
+    grid-area: col1;
 }
 
 .kitchen {
@@ -43,10 +51,29 @@
     height: 300px;
     background-color: rgba(245, 245, 245, 0.602);
     margin-bottom: 2rem;
+    grid-area: col2;
 }
 
 .livingroom {
     width: 300px;
     height: 300px;
     background-color: rgba(245, 245, 245, 0.602);
+    margin-bottom: 2rem;
+    grid-area: col3;
+}
+
+.bathroom {
+    width: 300px;
+    height: 300px;
+    background-color: rgba(245, 245, 245, 0.602);
+    margin-bottom: 2rem;
+    grid-area: col4;
+}
+
+@media only screen and (max-width: 640px) {
+    .columns {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: none;
+    }
 }
