--- a/frontend/lightcontrol-frontend/src/styles/Home.css
+++ b/frontend/lightcontrol-frontend/src/styles/Home.css
@@ -5,7 +5,7 @@
     align-items: flex-start;
 }
 
-.button-login {
+#login {
     margin-top: 2rem;
     margin-right: 2rem;
     position: absolute;
