--- a/frontend/lightcontrol-frontend/src/styles/UserLogin.css
+++ b/frontend/lightcontrol-frontend/src/styles/UserLogin.css
@@ -1,9 +1,8 @@
 .user-form-container {
     width: 50%;
     padding: 5rem;
-    margin-top: 3rem;
-    margin-left: 2rem;
-    /* margin-right: 0.5rem; */
+    margin-top: 1rem;
+    margin-right: 1rem;
     position: absolute;
     top: 0%;
     right: 0%;
